# ArndtOs

./: .antigravity-config.json  .dockerignore  .env.example  .gitignore  AGENTS.md  ArndtOs.code-workspace  GEMINI.md  MCP_COMPLIANCE_REPORT.md  README.md  SKILL.md  SKILLS.md  blog_content.md  bootstrap-antigravity.ps1  check_zai.ps1  claude_settings.json  cleanup_history.ps1  config.dev.toml  config.telegram.toml  config.toml  daemon_state.json  docker-compose.yml  get_keys.ps1  get_tg_id.py  install_skills.ps1  keys_list.txt  package-lock.json  package.json  query_db.py  schema_types.txt  send_telegram.ps1  take_screenshots.js  take_screenshots_v2.js  tsconfig.json  ws_client.py  z_token_monitor.py  zeroclaw-extended.Dockerfile  zeroclaw.Dockerfile  zeroclaw.Dockerfile.old  zeroclaw.Dockerfile.old3  zeroclaw_model_knowledge.md
.claude/: settings.local.json
.signals/: 03917f1f-68b3-40a0-83f8-96599d930dd0.done  049ea138-fd38-45a9-aa02-f62e11cb3680.done  0517ec24-52d1-4a97-8d0a-78ef7661a470.done  06b8a29a-bc9a-47fa-9dd5-225ecf593191.done  10b7b01b-644b-47ab-9784-d271c40e2702.done  116883d9-8469-4389-acd4-153a992224d7.done  15357143-1e51-4d9d-93fc-2f670047d0e4.done  16323c9c-936a-4e16-8b37-7ae425321dce.done  1dce1189-2120-40bb-94fc-62f1a20a7491.done  (+60 more)
daemon/: Cargo.toml
daemon/src/: auth.rs  chat.rs  jwt_auth.rs  lib.rs  main.rs  messages.rs  metrics.rs  rate_limiter.rs  server.rs  telegram.rs
docs/: README.md  (+18 more)
router/: pyproject.toml
router/src/: router.py  types.py
router/src/agents/: __init__.py  zai_agent.py
router/src/telegram/: __init__.py  webhook.py
router/src/zeroclaw_router.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
router/tests/: test_router.py
(+180 files in other folders)
