[package]
name = "zeroclaw-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
teloxide = { version = "0.12", features = ["macros"] }
governor = "0.6"
dashmap = "5.5"
lazy_static = "1.4"
tempfile = "3"
# Metrics and Observability
prometheus = "0.13"
