[project]
name = "zeroclaw-router"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "structlog>=23.0.0",
    "aiohttp>=3.9.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0"
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"